--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -39,23 +39,69 @@
 
 /* Reset all styles */
 * {
+    /* background:rgba(10,10,10,0.4); */
+    /* background:rgba(200,200,200,0.4); */
     border: none;
     border-radius: 0;
     min-height: 0;
     margin: 0;
     padding: 0;
+
 }
 
 /* The whole bar */
-#waybar {
+    #waybar {
     color: white;
-    background: #282c34;
-    opacity:0.95;
-    font-family: FiraCode Nerd Font, Cantarell, Noto Sans, sans-serif;
-    font-size: 14px;
+    /* background: #002c34; */
+    /* background: #aaaaee; */
+    background:rgba(0,0,0,0.5);
+    /* background: rgba(28,29,34,0); */
+    /* font-family: FiraCode Nerd Font, Cantarell, Noto Sans, sans-serif; */
+    /* font-family: JetBrainsMono Nerd Font, Kingnam Maiyuan, Noto Sans, sans-serif; */
+    font-family: JetBrainsMono Nerd Font, Kingnam Maiyuan;
+
+    font-size: 18px;
 }
 
-/* Each module */
+window#waybar > box {
+    border-radius: 5px;
+    margin: 3px 3px 3px 3px;
+    margin: 0px 0px 4px 0px;
+    box-shadow: 0px 0px 3px #101010;
+}
+
+/* #custom-close:hover */
+/* { */
+/*     background: inherit; */
+/*     color:black; */
+/* } */
+/* @keyframes blink-close{ */
+/*     from {color:blue} */
+/*     to{color:red} */
+/* } */
+/**/
+/* #custom-close  */
+/* { */
+/*     background:black; */
+/*     border-bottom: 3px solid yellow; */
+/*     animation-duration: 1s; */
+/*     animation-iteration-count: infinite; */
+/* 	animation-direction: alternate; */
+/*     animation-name: blink-close; */
+/* } */
+
+/* #custom-close label */
+/* { */
+/*     border-bottom: 3px solid white; */
+/*     background:white; */
+/*     color:black; */
+/*     font-weight: bold; */
+/*     padding-left: 8px; */
+/*     padding-right: 8px; */
+/* } */
+
+
+#disk,
 #battery,
 #clock,
 #cpu,
@@ -64,10 +110,39 @@
 #mode,
 #network,
 #pulseaudio,
-#temperature,
-#tray {
-    padding-left: 10px;
-    padding-right: 10px;
+/* #tray , */
+#temperature
+{
+    /* background: #141834; */
+    background:#aaaaee;
+    background:rgba(176,176,238,0.6);
+    color:black;
+    font-weight:bold;
+    /* background: rgba(14,18,34,0.2); */
+    /* background: rgba(0,0,0,0.1); */
+    padding-left: 8px;
+    padding-right: 8px;
+    /* margin-top:5px; */
+}
+
+#disk:hover,
+#clock:hover,
+#custom-spaceleft:hover,
+#custom-spaceright:hover,
+#cpu:hover,
+#memory:hover,
+#custom-close:hover,
+#pulseaudio:hover
+{
+    color:black;
+    background:#11cccc;
+    box-shadow:inherit;
+    text-shadow:inherit;
+    /* background: red; */
+}
+
+#disk{
+    border-radius: 0px 0px 0px 0px;
 }
 
 
@@ -102,6 +177,7 @@
 #clock {
     font-weight: bold;
 }
+
 
 #cpu {
   /* No styles */
@@ -168,42 +244,125 @@
 
 #tray {
     /* No styles */
+    /* background: rgba(0,0,0,0.5); */
+    /* background:#141834; */
+    /* background: #9999ee; */
+    background:rgba(176,176,238,0.4);
+
+
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top:2px;
+    /* border-radius: 0px 5px 5px 0px; */
+    /* margin-top:5px; */
+    /* margin-right:5; */
+    /* background: blue; */
 }
 
 #window {
-    font-weight: bold;
+    /* text-align:center; */
+    padding-left:10px;
+    padding-right:10px;
+    /* margin-top:5px; */
+    font-weight:bold;
+    /* background: rgba(28,20,44,0.5) */
+
+    
+    /* font-weight: bold; */
 }
 
 
-button {
-    color: white;
-}
+/* button { */
+/*     color: white; */
+/**/
+/* } */
 
 label {
     all: unset;
 }
 
+
+
+#custom-spaceright{
+    /* background: #141834; */
+    background : rgba(10,14,30,0.7);
+    color:#bbbbbb;
+    padding-left:6px;
+    padding-right:6px;
+    border-radius: 0px 0px 0px 0px;
+    /* margin-top:5px; */
+}
+
+#custom-spaceleft{
+    /* background: #141834; */
+    background : rgba(10,14,30,0.7);
+    color:#bbbbbb;
+    padding-left:6px;
+    padding-right:12px;
+    /* border-radius: 5px 0px 0px 5px; */
+    /* margin-top:5px; */
+    /* margin-left:5px; */
+}
+
+#workspaces{
+    /* margin-top:5px; */
+    /* margin-left:5px; */
+}
 #workspaces button {
     /* To compensate for the top border and still have vertical centering */
-    padding-bottom: 2px;
-    padding-left: 10px;
-    padding-right: 10px;
-    color: #666666;
+    
+    font-size:20px;
+    padding-left: 6px;
+    padding-right: 9px;
+    /* margin-bottom:-2; */
+    /* margin-top:2; */
+    /* background: #141834; */
+    background : rgba(10,14,30,0.7);
+    /* font-weight:bold; */
+    color: #bbbbbb;
+    /* border-bottom:2px solid rgba(0,0,0,0); */
+    /* border-top:2px solid rgba(0,0,0,0); */
+    /* border-bottom:10px solid white; */
 }
 
 #workspaces button.active {
-    color: #eeeeee;
-    background-color: #282c34;
-    border-top: 2px solid white; 
+    color: #ffffff;
+    /* background: #141834; */
+    /* background-color: #282c34; */
+    /* background:#aaaade; */
+    background: #444874;
+    color:white;
+    font-weight:bold;
+    /* border-bottom: 2px solid white;  */
+}
+#workspaces button:hover {
+    /* color: #ffffff; */
+    /* background: #141834; */
+    /* background-color: #282c34; */
+    /* background:#aaaade; */
+    background: cyan;
+    color:black;
+    font-weight:bold;
+    box-shadow:inherit;
+    text-shadow:inherit;
+    /* border-bottom: 2px solid white;  */
 }
 
-#workspaces button.focused {
-    color: #eeeeee;
-    background-color: #282c34;
-    border-top: 2px solid white; 
+/* #workspaces button.focused { */
+/*     color: #ffffff; */
+/*     background-color: #282c34; */
+/*     background: #343864; */
+/*     font-weight:bold; */
+/*     border-top: 2px solid white;  */
+/* } */
+#workspaces button.hidden{
+    background:green;
+    color:black;
 }
 
 #workspaces button.urgent {
-    border-color: #c9545d;
+    background: #141834;
+    font-weight:bold;
+    /* border-color: #c9545d; */
     color: #c9545d;
 }
